Update to doxygen

--- a/latex/annotated.tex
+++ b/latex/annotated.tex
@@ -1,5 +1,5 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\hyperlink{classmax7219_l_e_d}{max7219\+L\+ED} \\*Max7219\+L\+ED class }{\pageref{classmax7219_l_e_d}}{}
-\item\contentsline{section}{\hyperlink{classmonochrome_display}{monochrome\+Display} }{\pageref{classmonochrome_display}}{}
+\item\contentsline{section}{\hyperlink{classmonochrome_display}{monochrome\+Display} \\*Monochrome\+Display class }{\pageref{classmonochrome_display}}{}
 \end{DoxyCompactList}
