--- a/latex/classmax7219_l_e_d.tex
+++ b/latex/classmax7219_l_e_d.tex
@@ -20,20 +20,20 @@ Inheritance diagram for max7219\+L\+ED\+:\begin{figure}[H]
 \item 
 \hyperlink{classmax7219_l_e_d_a3f13dbd1dd54e3d3ce0148c1119273e5}{max7219\+L\+ED} (hwlib\+::target\+::pin\+\_\+out clk, hwlib\+::target\+::pin\+\_\+out din, hwlib\+::target\+::pin\+\_\+out cs, const int \&size\+\_\+x=\hyperlink{max7219_l_e_dconstants_8hpp_a2a4cf20d00f170bb1778318f645ab6cb}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+ZE}, const int \&size\+\_\+y=\hyperlink{max7219_l_e_dconstants_8hpp_a2a4cf20d00f170bb1778318f645ab6cb}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+ZE})
 \item 
-void \hyperlink{classmax7219_l_e_d_a6ce14869c58cf742e39e16620a4a724f}{draw\+Pixel} (int x, int y, int matrix\mbox{[}\hyperlink{max7219_l_e_dconstants_8hpp_a2a4cf20d00f170bb1778318f645ab6cb}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+ZE}+1\mbox{]}\mbox{[}(\hyperlink{max7219_l_e_dconstants_8hpp_a2a4cf20d00f170bb1778318f645ab6cb}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+ZE} $\ast$\hyperlink{max7219_l_e_dconstants_8hpp_aa3f1c3f51823e34beb0682e7f799793b}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+A\+M\+O\+U\+NT})+1\mbox{]}, int data=1) override
-\begin{DoxyCompactList}\small\item\em Sets and draws a single pixel. \end{DoxyCompactList}\item 
-void \hyperlink{classmax7219_l_e_d_a5ea755271f6306d1f0e97ec1f7c2c7c0}{clear} (int matrix\mbox{[}\hyperlink{max7219_l_e_dconstants_8hpp_a2a4cf20d00f170bb1778318f645ab6cb}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+ZE}+1\mbox{]}\mbox{[}(\hyperlink{max7219_l_e_dconstants_8hpp_a2a4cf20d00f170bb1778318f645ab6cb}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+ZE} $\ast$\hyperlink{max7219_l_e_dconstants_8hpp_aa3f1c3f51823e34beb0682e7f799793b}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+A\+M\+O\+U\+NT})+1\mbox{]}) override
-\begin{DoxyCompactList}\small\item\em Clears the matrix and screen. \end{DoxyCompactList}\item 
-void \hyperlink{classmax7219_l_e_d_abb0f536db36aa950bc189416d65db6a7}{initialise} (int matrix\mbox{[}\hyperlink{max7219_l_e_dconstants_8hpp_a2a4cf20d00f170bb1778318f645ab6cb}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+ZE}+1\mbox{]}\mbox{[}(\hyperlink{max7219_l_e_dconstants_8hpp_a2a4cf20d00f170bb1778318f645ab6cb}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+ZE} $\ast$\hyperlink{max7219_l_e_dconstants_8hpp_aa3f1c3f51823e34beb0682e7f799793b}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+A\+M\+O\+U\+NT})+1\mbox{]})
-\begin{DoxyCompactList}\small\item\em initialise max7219 chip \end{DoxyCompactList}\item 
-void \hyperlink{classmax7219_l_e_d_af913d07107bfc902dc66af95ead59f21}{send\+\_\+repeated\+\_\+data} (const uint16\+\_\+t data, const uint8\+\_\+t repeat)
-\begin{DoxyCompactList}\small\item\em Send repeated data. \end{DoxyCompactList}\item 
 void \hyperlink{classmax7219_l_e_d_ae15df95125db9c4efb33f19720c893a0}{shift\+\_\+repeated\+\_\+data} (const uint16\+\_\+t data, const uint8\+\_\+t repeat)
 \begin{DoxyCompactList}\small\item\em Shift repeated data. \end{DoxyCompactList}\item 
+void \hyperlink{classmax7219_l_e_d_af913d07107bfc902dc66af95ead59f21}{send\+\_\+repeated\+\_\+data} (const uint16\+\_\+t data, const uint8\+\_\+t repeat)
+\begin{DoxyCompactList}\small\item\em Send repeated data. \end{DoxyCompactList}\item 
+void \hyperlink{classmax7219_l_e_d_abb0f536db36aa950bc189416d65db6a7}{initialise} (int matrix\mbox{[}\hyperlink{max7219_l_e_dconstants_8hpp_a2a4cf20d00f170bb1778318f645ab6cb}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+ZE}+1\mbox{]}\mbox{[}(\hyperlink{max7219_l_e_dconstants_8hpp_a2a4cf20d00f170bb1778318f645ab6cb}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+ZE} $\ast$\hyperlink{max7219_l_e_dconstants_8hpp_aa3f1c3f51823e34beb0682e7f799793b}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+A\+M\+O\+U\+NT})+1\mbox{]})
+\begin{DoxyCompactList}\small\item\em initialise max7219 chip \end{DoxyCompactList}\item 
 void \hyperlink{classmax7219_l_e_d_a651b73c3236443e478785f4a3e180b3a}{set\+Pixel} (int x, int y, int matrix\mbox{[}\hyperlink{max7219_l_e_dconstants_8hpp_a2a4cf20d00f170bb1778318f645ab6cb}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+ZE}+1\mbox{]}\mbox{[}(\hyperlink{max7219_l_e_dconstants_8hpp_a2a4cf20d00f170bb1778318f645ab6cb}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+ZE} $\ast$\hyperlink{max7219_l_e_dconstants_8hpp_aa3f1c3f51823e34beb0682e7f799793b}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+A\+M\+O\+U\+NT})+1\mbox{]}, int data=1)
 \begin{DoxyCompactList}\small\item\em Sets a pixel in the matrix. \end{DoxyCompactList}\item 
 void \hyperlink{classmax7219_l_e_d_ace27bb3d99143c9c70cfead632e93f89}{draw\+Screen} (int matrix\mbox{[}\hyperlink{max7219_l_e_dconstants_8hpp_a2a4cf20d00f170bb1778318f645ab6cb}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+ZE}+1\mbox{]}\mbox{[}(\hyperlink{max7219_l_e_dconstants_8hpp_a2a4cf20d00f170bb1778318f645ab6cb}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+ZE} $\ast$\hyperlink{max7219_l_e_dconstants_8hpp_aa3f1c3f51823e34beb0682e7f799793b}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+A\+M\+O\+U\+NT})+1\mbox{]})
 \begin{DoxyCompactList}\small\item\em Translates (software)matrix to screen. \end{DoxyCompactList}\item 
+void \hyperlink{classmax7219_l_e_d_a6ce14869c58cf742e39e16620a4a724f}{draw\+Pixel} (int x, int y, int matrix\mbox{[}\hyperlink{max7219_l_e_dconstants_8hpp_a2a4cf20d00f170bb1778318f645ab6cb}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+ZE}+1\mbox{]}\mbox{[}(\hyperlink{max7219_l_e_dconstants_8hpp_a2a4cf20d00f170bb1778318f645ab6cb}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+ZE} $\ast$\hyperlink{max7219_l_e_dconstants_8hpp_aa3f1c3f51823e34beb0682e7f799793b}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+A\+M\+O\+U\+NT})+1\mbox{]}, int data=1) override
+\begin{DoxyCompactList}\small\item\em Sets and draws a single pixel. \end{DoxyCompactList}\item 
+void \hyperlink{classmax7219_l_e_d_a5ea755271f6306d1f0e97ec1f7c2c7c0}{clear} (int matrix\mbox{[}\hyperlink{max7219_l_e_dconstants_8hpp_a2a4cf20d00f170bb1778318f645ab6cb}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+ZE}+1\mbox{]}\mbox{[}(\hyperlink{max7219_l_e_dconstants_8hpp_a2a4cf20d00f170bb1778318f645ab6cb}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+ZE} $\ast$\hyperlink{max7219_l_e_dconstants_8hpp_aa3f1c3f51823e34beb0682e7f799793b}{L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+A\+M\+O\+U\+NT})+1\mbox{]}) override
+\begin{DoxyCompactList}\small\item\em Clears the matrix and screen. \end{DoxyCompactList}\item 
 int \hyperlink{classmax7219_l_e_d_a42f5d4ddc8337981f6f32fbee145447f}{get\+\_\+x} ()
 \begin{DoxyCompactList}\small\item\em Get width of object. \end{DoxyCompactList}\item 
 int \hyperlink{classmax7219_l_e_d_ae3e7e73188d7abc8664b5bfca72bf4a5}{get\+\_\+y} ()
@@ -58,7 +58,7 @@ This class interfaces the max7219 shift register for use on one or multiple 8x8 
 \item[{const int \&}]{size\+\_\+y = {\ttfamily {\bf L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+ZE}}}
 \end{DoxyParamCaption}
 )}\hypertarget{classmax7219_l_e_d_a3f13dbd1dd54e3d3ce0148c1119273e5}{}\label{classmax7219_l_e_d_a3f13dbd1dd54e3d3ce0148c1119273e5}
-The constructor for objects based on the \hyperlink{classmax7219_l_e_d}{max7219\+L\+ED} class. This constructor requires 3 pins connected to the Arduino Due for the clock, data\+In and chip\+Select, and two values that represent the width and the height of your L\+ED matrix construction. 
+The constructor for objects based on the \hyperlink{classmax7219_l_e_d}{max7219\+L\+ED} class. This constructor requires 3 pins connected to the Arduino Due for the clock(clk), data\+In(din) and chip\+Select(cs), and two values that represent the width and the height of your L\+ED matrix construction. 
 
 \subsection{Member Function Documentation}
 \index{max7219\+L\+ED@{max7219\+L\+ED}!clear@{clear}}
@@ -72,7 +72,7 @@ The constructor for objects based on the \hyperlink{classmax7219_l_e_d}{max7219\
 
 Clears the matrix and screen. 
 
-This function clears the matrix by setting all values to 0, and then uses the draw\+Screen function to translate this to the L\+ED matrix screen. 
+This method clears the matrix by setting all values to 0, and then uses the draw\+Screen method to translate this to the L\+ED matrix screen. 
 
 Implements \hyperlink{classmonochrome_display}{monochrome\+Display}.
 
@@ -90,7 +90,7 @@ Implements \hyperlink{classmonochrome_display}{monochrome\+Display}.
 
 Sets and draws a single pixel. 
 
-This function sets a pixel in the matrix to 1 (or any other value if otherwise specified in the data variable), and then draws it to the screen. It is a combinatory function of set\+Pixel and draw\+Screen, making it more efficient to call this function for single pixels, but slower for bigger objects. 
+This method sets a pixel in the matrix to 1 (or any other value if otherwise specified in the data variable), and then draws it to the screen. It is a combinatory method of set\+Pixel and draw\+Screen, making it more efficient to call this method for single pixels, but slower for bigger objects. 
 
 Implements \hyperlink{classmonochrome_display}{monochrome\+Display}.
 
@@ -105,7 +105,7 @@ Implements \hyperlink{classmonochrome_display}{monochrome\+Display}.
 
 Translates (software)matrix to screen. 
 
-This function reads a matrix, and draws the corresponding pixels on the L\+ED matrix screen. \index{max7219\+L\+ED@{max7219\+L\+ED}!get\+\_\+x@{get\+\_\+x}}
+This method reads a matrix, and draws the corresponding pixels on the L\+ED matrix screen. \index{max7219\+L\+ED@{max7219\+L\+ED}!get\+\_\+x@{get\+\_\+x}}
 \index{get\+\_\+x@{get\+\_\+x}!max7219\+L\+ED@{max7219\+L\+ED}}
 \subsubsection[{\texorpdfstring{get\+\_\+x()}{get_x()}}]{\setlength{\rightskip}{0pt plus 5cm}int max7219\+L\+E\+D\+::get\+\_\+x (
 \begin{DoxyParamCaption}
@@ -116,7 +116,7 @@ This function reads a matrix, and draws the corresponding pixels on the L\+ED ma
 
 Get width of object. 
 
-This function returns the width of the L\+ED matrix screen, as defined in the constructor/max7219\+L\+E\+Dconstants file. \index{max7219\+L\+ED@{max7219\+L\+ED}!get\+\_\+y@{get\+\_\+y}}
+This method returns the width of the L\+ED matrix screen, as defined in the constructor/max7219\+L\+E\+Dconstants file. \index{max7219\+L\+ED@{max7219\+L\+ED}!get\+\_\+y@{get\+\_\+y}}
 \index{get\+\_\+y@{get\+\_\+y}!max7219\+L\+ED@{max7219\+L\+ED}}
 \subsubsection[{\texorpdfstring{get\+\_\+y()}{get_y()}}]{\setlength{\rightskip}{0pt plus 5cm}int max7219\+L\+E\+D\+::get\+\_\+y (
 \begin{DoxyParamCaption}
@@ -127,7 +127,7 @@ This function returns the width of the L\+ED matrix screen, as defined in the co
 
 Get heigth of object. 
 
-This function returns the height of the L\+ED matrix screen, as defined in the constructor/max7219\+L\+E\+Dconstants file. \index{max7219\+L\+ED@{max7219\+L\+ED}!initialise@{initialise}}
+This method returns the height of the L\+ED matrix screen, as defined in the constructor/max7219\+L\+E\+Dconstants file. \index{max7219\+L\+ED@{max7219\+L\+ED}!initialise@{initialise}}
 \index{initialise@{initialise}!max7219\+L\+ED@{max7219\+L\+ED}}
 \subsubsection[{\texorpdfstring{initialise(int matrix[L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+Z\+E+1][(\+L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+Z\+E $\ast$\+L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+A\+M\+O\+U\+N\+T)+1])}{initialise(int matrix[LEDMATRIX_SIZE+1][(LEDMATRIX_SIZE *LEDMATRIX_AMOUNT)+1])}}]{\setlength{\rightskip}{0pt plus 5cm}void max7219\+L\+E\+D\+::initialise (
 \begin{DoxyParamCaption}
@@ -138,7 +138,7 @@ This function returns the height of the L\+ED matrix screen, as defined in the c
 
 initialise max7219 chip 
 
-This function initialises the L\+ED matrices. All data values can be altered in max7219\+L\+E\+Dconstants. All registers specified in this function must be initialised through this function. It uses the send\+\_\+repeated\+\_\+data function, because the commands need to be sent to every max7219 chip connected. \index{max7219\+L\+ED@{max7219\+L\+ED}!send\+\_\+repeated\+\_\+data@{send\+\_\+repeated\+\_\+data}}
+This method initialises the L\+ED matrices. All operation values can be altered in \hyperlink{max7219_l_e_dconstants_8hpp}{max7219\+L\+E\+Dconstants.\+hpp}. All registers specified in this method must be initialised. It uses the send\+\_\+repeated\+\_\+data method to send the commands to every max7219 chip connected. \index{max7219\+L\+ED@{max7219\+L\+ED}!send\+\_\+repeated\+\_\+data@{send\+\_\+repeated\+\_\+data}}
 \index{send\+\_\+repeated\+\_\+data@{send\+\_\+repeated\+\_\+data}!max7219\+L\+ED@{max7219\+L\+ED}}
 \subsubsection[{\texorpdfstring{send\+\_\+repeated\+\_\+data(const uint16\+\_\+t data, const uint8\+\_\+t repeat)}{send_repeated_data(const uint16_t data, const uint8_t repeat)}}]{\setlength{\rightskip}{0pt plus 5cm}void max7219\+L\+E\+D\+::send\+\_\+repeated\+\_\+data (
 \begin{DoxyParamCaption}
@@ -150,7 +150,7 @@ This function initialises the L\+ED matrices. All data values can be altered in 
 
 Send repeated data. 
 
-This function repeatedly sends data as often as needed, based on the value stored in \textquotesingle{}repeat\textquotesingle{}. It is recommended to set repeat to the amount of max7219 chips daisychained, otherwise non-\/specified behaviour will occur. \index{max7219\+L\+ED@{max7219\+L\+ED}!set\+Pixel@{set\+Pixel}}
+This method repeatedly sends data as often as needed, based on the value stored in \textquotesingle{}repeat\textquotesingle{}. This method uses the shift\+\_\+repeated\+\_\+data method. It is recommended to set repeat to the amount of max7219 chips daisychained, otherwise non-\/specified behaviour might occur when the data is loaded. \index{max7219\+L\+ED@{max7219\+L\+ED}!set\+Pixel@{set\+Pixel}}
 \index{set\+Pixel@{set\+Pixel}!max7219\+L\+ED@{max7219\+L\+ED}}
 \subsubsection[{\texorpdfstring{set\+Pixel(int x, int y, int matrix[L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+Z\+E+1][(\+L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+S\+I\+Z\+E $\ast$\+L\+E\+D\+M\+A\+T\+R\+I\+X\+\_\+\+A\+M\+O\+U\+N\+T)+1], int data=1)}{setPixel(int x, int y, int matrix[LEDMATRIX_SIZE+1][(LEDMATRIX_SIZE *LEDMATRIX_AMOUNT)+1], int data=1)}}]{\setlength{\rightskip}{0pt plus 5cm}void max7219\+L\+E\+D\+::set\+Pixel (
 \begin{DoxyParamCaption}
@@ -164,7 +164,7 @@ This function repeatedly sends data as often as needed, based on the value store
 
 Sets a pixel in the matrix. 
 
-This function sets the specified point (x,y) in the matrix to 1 (standard, or any other value if otherwise specified in the data variable). \index{max7219\+L\+ED@{max7219\+L\+ED}!shift\+\_\+repeated\+\_\+data@{shift\+\_\+repeated\+\_\+data}}
+This method sets the specified point (x,y) in the matrix to 1 (standard, or any other value if otherwise specified in the data variable). \index{max7219\+L\+ED@{max7219\+L\+ED}!shift\+\_\+repeated\+\_\+data@{shift\+\_\+repeated\+\_\+data}}
 \index{shift\+\_\+repeated\+\_\+data@{shift\+\_\+repeated\+\_\+data}!max7219\+L\+ED@{max7219\+L\+ED}}
 \subsubsection[{\texorpdfstring{shift\+\_\+repeated\+\_\+data(const uint16\+\_\+t data, const uint8\+\_\+t repeat)}{shift_repeated_data(const uint16_t data, const uint8_t repeat)}}]{\setlength{\rightskip}{0pt plus 5cm}void max7219\+L\+E\+D\+::shift\+\_\+repeated\+\_\+data (
 \begin{DoxyParamCaption}
@@ -176,7 +176,7 @@ This function sets the specified point (x,y) in the matrix to 1 (standard, or an
 
 Shift repeated data. 
 
-This function repeatedly shifts data as often as needed, based on the value stored in \textquotesingle{}repeat\textquotesingle{}. but does not load it yet. Especially useful for initialising. Loading can be done manually by setting the cs low before shifting data and high after. Loading can also be done by using the send\+\_\+repeated\+\_\+data function, which uses this shift function. It is recommended to set repeat to the amount of max7219 chips daisychained, otherwise non-\/specified behaviour might occur when the data is loaded. 
+This method repeatedly shifts data as often as needed, based on the value stored in \textquotesingle{}repeat\textquotesingle{}. but does not load it yet. Especially useful for initialising. Loading can be done manually by setting the chip\+Select low before shifting data, and high after. Loading can also be done by using the send\+\_\+repeated\+\_\+data method, which uses this shift method. It is recommended to set repeat to the amount of max7219 chips daisychained, otherwise non-\/specified behaviour might occur when the data is loaded. 
 
 The documentation for this class was generated from the following files\+:\begin{DoxyCompactItemize}
 \item 
