--- a/latex/classmonochrome_display.tex
+++ b/latex/classmonochrome_display.tex
@@ -1,5 +1,14 @@
 \hypertarget{classmonochrome_display}{}\section{monochrome\+Display Class Reference}
 \label{classmonochrome_display}\index{monochrome\+Display@{monochrome\+Display}}
+
+
+\hyperlink{classmonochrome_display}{monochrome\+Display} class  
+
+
+
+
+{\ttfamily \#include $<$monochrome.\+hpp$>$}
+
 Inheritance diagram for monochrome\+Display\+:\begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -29,6 +38,11 @@ const int {\bfseries size\+\_\+y}\hypertarget{classmonochrome_display_ab3eccf828
 \end{DoxyCompactItemize}
 
 
+\subsection{Detailed Description}
+\hyperlink{classmonochrome_display}{monochrome\+Display} class 
+
+This class is abstract. It can be used for inheritance purposes with monochrome displays, such as L\+ED matrices and (old) O\+L\+ED screens. 
+
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-monochrome.\+hpp\end{DoxyCompactItemize}
+\hyperlink{monochrome_8hpp}{monochrome.\+hpp}\end{DoxyCompactItemize}
