--- a/latex/max7219_l_e_d_8cpp.tex
+++ b/latex/max7219_l_e_d_8cpp.tex
@@ -25,4 +25,4 @@ void \hyperlink{max7219_l_e_d_8cpp_a1a3100a4e708acfadc2c26d04e7531b9}{pulse\+\_\
 
 Pulse clock. 
 
-This function pulses the clock. 
+This function pulses the clock 
