--- a/latex/files.tex
+++ b/latex/files.tex
@@ -3,5 +3,5 @@ Here is a list of all documented files with brief descriptions\+:\begin{DoxyComp
 \item\contentsline{section}{\hyperlink{max7219_l_e_d_8cpp}{max7219\+L\+E\+D.\+cpp} }{\pageref{max7219_l_e_d_8cpp}}{}
 \item\contentsline{section}{\hyperlink{max7219_l_e_d_8hpp}{max7219\+L\+E\+D.\+hpp} }{\pageref{max7219_l_e_d_8hpp}}{}
 \item\contentsline{section}{\hyperlink{max7219_l_e_dconstants_8hpp}{max7219\+L\+E\+Dconstants.\+hpp} }{\pageref{max7219_l_e_dconstants_8hpp}}{}
-\item\contentsline{section}{{\bfseries monochrome.\+hpp} }{\pageref{monochrome_8hpp}}{}
+\item\contentsline{section}{\hyperlink{monochrome_8hpp}{monochrome.\+hpp} }{\pageref{monochrome_8hpp}}{}
 \end{DoxyCompactList}
